--- a/MainHTML.html
+++ b/MainHTML.html
@@ -85,7 +85,7 @@
 
       <p style="font-family:Trebuchet MS; font-size: 20px;">
         <u>ASTROHORIZON</u> is India's Leading Online Flight Booking Start up which aims to provide Flight Tickets<br>
-        at affordable prices.Founded on 1st March 2022, by -<u> GUNTAS, HARSHIT and GEETANSH<br>
+        at affordable prices.Founded on 1st March 2022, by -<u> HARSHIT,GUNTAS and GEETANSH<br>
         </u> Our Aim is to provide the most trusted User Experience , be it in terms of Quickest
         Searching<br>
         and Booking Flights, Fastest Payments along with user Friendly Interface.
